# hatch-buildext

./: README.md  pyproject.toml
.github/workflows/: checks.yml  release.yml  test.yml
src/hatch_buildext/: __about__.py  __init__.py  _compat.py  _types.py  _utils.py  hooks.py  plugin.py  resolver.py
src/hatch_buildext/core/: __init__.py  macro.py  resolver.py
tests/: __init__.py  _types.py  _utils.py  conftest.py  test_meta.py  test_wheels.py
