[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "hatch-buildext"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
authors = [{ name = "tunnelworks", email = "git@tunnelworks.org" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["hatchling", "setuptools"]

[project.urls]
Documentation = "https://github.com/tunnelworks/hatch-buildext#readme"
Issues = "https://github.com/tunnelworks/hatch-buildext/issues"
Source = "https://github.com/tunnelworks/hatch-buildext"


[project.entry-points.hatch]
buildext = "hatch_buildext.hooks"


[tool.hatch.version]
path = "src/hatch_buildext/__about__.py"


[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0", "pytest"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/hatch_buildext tests}"


[tool.coverage.run]
source_pkgs = ["hatch_buildext", "tests"]
branch = true
parallel = true
omit = ["src/hatch_buildext/__about__.py"]

[tool.coverage.paths]
hatch_buildext = ["src/hatch_buildext", "*/hatch-buildext/src/hatch_buildext"]
tests = ["tests", "*/hatch-buildext/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]


[tool.hatch.build.targets.sdist]
exclude = [".github", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/hatch_buildext"]
